log
Sun, Aug 17, 2025  5:52:42 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Aug 17, 2025  6:14:58 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
       int *numero = (int)malloc(sizeof(int));
                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
10f7ee7
